Fix position of nav bar on mobile resolution

--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -121,13 +121,13 @@
 }
 
 nav {
+  display: grid;
   width: 75%;
   border: 2px solid colors.$blue;
-  justify-self: center;
   padding-top: 5px;
   padding-bottom: 5px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 12.5%;
+  margin-right: 12.5%;
   border-radius: 23px;
   position: fixed;
   bottom: 0;
@@ -196,7 +196,7 @@ nav {
     @include base.desktop-options-border;
     visibility: hidden;
     opacity: 0;
-    transition: 0.3s;
+    transition: 0.2s;
     transform: scale(0);
     font-size: 0;
     width: 130px;
