--- a/styles/style.css
+++ b/styles/style.css
@@ -1101,13 +1101,13 @@ body,
 }
 
 nav {
+  display: grid;
   width: 75%;
   border: 2px solid #185adb;
-  justify-self: center;
   padding-top: 5px;
   padding-bottom: 5px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 12.5%;
+  margin-right: 12.5%;
   border-radius: 23px;
   position: fixed;
   bottom: 0;
@@ -1169,7 +1169,7 @@ nav ul li {
     box-shadow: 2px 2px 10px rgba(24, 90, 219, 0.5);
     visibility: hidden;
     opacity: 0;
-    transition: 0.3s;
+    transition: 0.2s;
     transform: scale(0);
     font-size: 0;
     width: 130px;
